[gd_scene load_steps=7 format=2]

[ext_resource path="res://scripts/GreenMarker.gd" type="Script" id=1]
[ext_resource path="res://assets/FlowerTest.tscn" type="PackedScene" id=2]
[ext_resource path="res://sounds/song1/song1-harmony1.wav" type="AudioStream" id=3]

[sub_resource type="SphereShape" id=3]
radius = 2.06421

[sub_resource type="SpatialMaterial" id=1]
flags_transparent = true
params_blend_mode = 1
albedo_color = Color( 0.196078, 1, 0, 1 )

[sub_resource type="CapsuleMesh" id=2]
material = SubResource( 1 )
radius = 0.115
mid_height = 7.195

[node name="GreenMarker" type="Area"]
script = ExtResource( 1 )

[node name="FlowerTest" parent="." instance=ExtResource( 2 )]
transform = Transform( 4, 0, 0, 0, 4, 0, 0, 0, 4, 0, 0.249401, 0 )

[node name="OmniLight" type="OmniLight" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3.50998, 0 )
light_color = Color( 0.0784314, 1, 0, 1 )
light_energy = 3.74
shadow_enabled = true

[node name="CollisionShape" type="CollisionShape" parent="."]
shape = SubResource( 3 )

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, -1, 0, 1, -1.62921e-07, 0, 3.682, 0 )
mesh = SubResource( 2 )
material/0 = null

[node name="TestSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
[connection signal="body_entered" from="." to="." method="_on_GreenMarker_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_GreenMarker_body_exited"]
